[package]
name = "rustproj"
version = "0.1.0"
authors = ["Joshua Maros <60271685+joshua-maros@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
num-traits = "0.2"
rand = "0.7.3"
rand_distr = "0.3.0"
